--- a/public_html/css/dark.css
+++ b/public_html/css/dark.css
@@ -1129,3 +1129,21 @@ a:hover {
     background-color: rgba(255, 255, 255, 0.07) !important;
     color: var(--text-color) !important;
 }
+
+
+/* Breadcrumb */
+.breadcrumb {
+    background-color: var(--bg-secondary);
+}
+
+.breadcrumb-item a {
+    color: var(--fidonet-blue);
+}
+
+.breadcrumb-item.active {
+    color: var(--text-color);
+}
+
+.breadcrumb-item + .breadcrumb-item::before {
+    color: var(--text-color-muted);
+}
